# kraken

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.en.md  README.md  vcpkg.json
cmake/modules/: FindDi.cmake  FindFmt.cmake  FindSol.cmake  FindUri.cmake  Usevcpkg.cmake
libs/cli/: CMakeLists.txt
libs/cli/src/kr/cli/: CMakeLists.txt  cli.cpp  cli.h  scheduler.cpp  scheduler.h
libs/core/: CMakeLists.txt
libs/core/src/kr/core/: CMakeLists.txt  config.cpp  config.h  core.cpp  core.h  expected.h  lang.h  likely.h  type.h  type_traits.h
libs/core/test/: CMakeLists.txt  expected_unittest.cpp  unittest_main.cpp
libs/io/: CMakeLists.txt
libs/io/src/kr/io/: CMakeLists.txt  bind_handler.h  buffer.h  compression.cpp  compression.h  http.cpp  work.h
libs/io/src/kr/io/detail/: bind_handler.h  work.h
libs/io/src/kr/io/impl/: buffer.h
libs/io/test/: CMakeLists.txt  http_unittest.cpp
libs/log/: CMakeLists.txt
libs/log/src/kr/log/: CMakeLists.txt  logging.cpp  logging.h
libs/log/src/kr/log/detail/: logging.h
libs/log/test/: CMakeLists.txt  log_unittest.cpp  unittest_main.cpp
libs/logging/: CMakeLists.txt  module.cmake
libs/logging/src/kr/logging/: CMakeLists.txt  logger.cpp  logger.h
libs/net/src/kr/net/: CMakeLists.txt  buffer.cpp  buffer.h  compression.cpp
libs/network/: CMakeLists.txt
libs/network/src/kr/network/: CMakeLists.txt  bind_handler.cpp  bind_handler.h  http.cpp  http.h  work.h
libs/network/src/kr/network/detail/: bind_handler.h  work.h
libs/network/test/: CMakeLists.txt  http_unittest.cpp  unittest_main.cpp
libs/protobuf/: CMakeLists.txt  module.cmake
libs/protobuf/compiler/: generator_helpers.h  lua_generator.cpp  lua_generator.h  lua_plugin.cpp
libs/protobuf/src/kr/protobuf/: CMakeLists.txt  msgpack.h  pack.h  rapidjson.h  service.h  unpack.h
libs/protobuf/src/kr/protobuf/compiler/: CMakeLists.txt  generator_helpers.h  lua_generator.h  lua_plugin.cpp  lua_plugin.h
libs/rpc/: CMakeLists.txt
libs/rpc/src/: channel.cpp  channel.h
libs/rpc/src/kr/rpc/: CMakeLists.txt  channel.h  options.proto  service.h
libs/utility/: CMakeLists.txt
libs/utility/src/kr/utility/: CMakeLists.txt  auto_timer.cpp  auto_timer.h  compress.cpp  compress.h  hash.h  ioc_container.cpp  ioc_container.h  murmurhash.cpp  murmurhash.h  random.cpp  random.h  string.cpp  string.h  uri.cpp  uri.h  uri_builder.cpp  uri_builder.h
libs/utility/src/kr/utility/detail/: auto_timer.h  ioc_container.h  string.h
libs/utility/test/: CMakeLists.txt  auto_timer_unittest.cpp  di_unittest.cpp  hash_unittest.cpp  ioc_unittest.cpp  random_unittest.cpp  string_unittest.cpp  unittest_main.cpp  uri_unittest.cpp
src/app/server/: CMakeLists.txt  main.cpp  server.app.lua  server.log.conf
tools/: array_list.lua
